<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="register_success"> Registrado com sucesso</string>
    <string name="google_key">AIzaSyCuHpbZOKvVEpCX-hlXPLlPLJ98rr2NT08</string>
    <string name="app_name">Zup Cascavel</string>
    <string name="appFacebook_id">0</string>
    <string name="estatisticas">Estatísticas</string>
    <string name="minha_conta">Minha Conta</string>
    <string name="solicite">Solicite</string>
    <string name="explore">Explore</string>
    <string name="filtrar">Filtrar</string>
    <string name="title_activity_solicite">SoliciteActivity</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="limpeza_de_boca_de_lobo">Limpeza de\nboca de lobo</string>
    <string name="coleta_de_entulho">Coleta de\nentulho</string>
    <string name="selecione_a_categoria">Selecione a categoria</string>
    <string name="selecione_o_local">Selecione o endereço ou arraste o marcador até a posição exata</string>
    <string name="adicione_fotos">Adicione uma ou até 3 fotos</string>
    <string name="concluir_solicitacao">Conclua sua solicitação</string>
    <string name="cancelar">Cancelar</string>
    <string name="nova_solicitacao">Nova Solicitação</string>
    <string name="anterior">Anterior</string>
    <string name="proximo">Próximo</string>
    <string name="publicar">Publicar</string>
    <string name="adicionar_foto">Adicionar foto</string>
    <string name="se_desejar_detalhe_a_situacao">Se desejar, detalhe a situação</string>
    <string name="compartilhar_rede_social">Compartilhar no %s</string>
    <string name="seletor_on_off">Seletor on/off</string>
    <string name="sair">Sair</string>
    <string name="minhas_solicitacoes">Minhas solicitações</string>
    <string name="solicitacoes">solicitações</string>
    <string name="solicitacao">solicitação</string>
    <string name="seta_direita">Seta direita</string>
    <string name="em_aberto">Em aberto</string>
    <string name="em_andamento">Em andamento</string>
    <string name="resolvido">resolvido</string>
    <string name="nao_resolvido">não resolvido</string>
    <string name="protocolo">protocolo</string>
    <string name="gps_off">Seu GPS está desativado, deseja ativá-lo?</string>
    <string name="yes">Sim</string>
    <string name="no">Não</string>
    <string name="enviada">enviada</string>
    <string name="editar">Editar</string>
    <string name="voltar">Voltar</string>
    <string name="title_activity_testes">TestesActivity</string>
    <string name="resolvidas">Resolvidas</string>
    <string name="nao_resolvidas">Não Resolvidas</string>
    <string name="ver_detalhes_de">Ver detalhes de</string>
    <string name="boca_de_lobo">Boca de lobo</string>
    <string name="coleta_entulho">Coleta de entulho</string>
    <string name="nao_possui_conta">Não possui conta?</string>
    <string name="cadastre_se">Cadastre-se</string>
    <string name="login">Login</string>
    <string name="possui_conta">Possui conta?</string>
    <string name="pular_e_acessar_o_aplicativo">Pular e acessar o aplicativo</string>
    <string name="nova_conta">Nova conta</string>
    <string name="criar">Criar</string>
    <string name="inicie_o_cadastro_usando">Inicie o cadastro usando</string>
    <string name="ou_preencha_os_dados">Ou preencha os dados</string>
    <string name="facebook">Facebook</string>
    <string name="twitter">Twitter</string>
    <string name="google">Google+</string>
    <string name="nome_completo">Nome completo</string>
    <string name="email">E-mail</string>
    <string name="senha">Senha</string>
    <string name="confirme_a_senha">Confirme a senha</string>
    <string name="telefone">Telefone</string>
    <string name="cpf">CPF</string>
    <string name="endereco">Endereço</string>
    <string name="cep">CEP</string>
    <string name="complemento">Complemento</string>
    <string name="bairro">Bairro</string>
    <string name="filtros">Filtros</string>
    <string name="concluido">Concluído</string>
    <string name="exibir_solicitacoes_de">Exibir solicitações de</string>
    <string name="ultimos_6_meses">Últimos\n6 meses</string>
    <string name="ultimos_3_meses">Últimos\n3 meses</string>
    <string name="ultimo_mes">Último\nmês</string>
    <string name="ultima_semana">Última\nsemana</string>
    <string name="expandir">Expandir</string>
    <string name="todos_os_status">Todos os status</string>
    <string name="resolvidos">Resolvidos</string>
    <string name="nao_resolvidos">Não resolvidos</string>
    <string name="exibir_pontos_de">Exibir pontos de</string>
    <string name="floresta_urbana">Floresta\nurbana</string>
    <string name="pracas_com_wifi">Praças com\nwifi</string>
    <string name="bocas_de_lobo">Bocas de\nlobo</string>
    <string name="entrar">Entrar</string>
    <string name="esqueceu_a_senha">Esqueceu a senha?</string>
    <string name="enviar">Enviar</string>
    <string name="todos_os_bairros">Todos os bairros</string>
    <string name="solicitaces_maiusculo">Solicitações</string>
    <string name="comentarios_maiusculo">Comentários</string>
    <string name="informacoes_maiusculo">Informações</string>
    <string name="termos_de_uso">Termos de Uso</string>
    <string name="complete_seus_dados">Agora complete seus dados</string>
    <string name="concordo_com_os_termos_de_uso"><![CDATA[Concordo com os <font color=\"#94d9ed\">Termos de Uso</font>]]> </string>
    <string name="login_social"><![CDATA[<font color=\"#94d9ed\">Entre</font> para compartilhar nas redes sociais]]> </string>
    <string name="termos_de_uso_cadastro"><![CDATA[Ao criar uma conta você concorda com os <u><font color=\"#94d9ed\">Termos de uso</font></u>]]> </string>
    <string name="termos_de_uso_relato"><![CDATA[Ao publicar uma solicitação você concorda com os <u><font color=\"#94d9ed\">Termos de uso</font></u>]]> </string>
    <string name="editar_conta">Editar conta</string>
    <string name="salvar">Salvar</string>
    <string name="pesquisar">Pesquisar</string>
    <string name="compartilhamento">Compartilhamento</string>
    <string name="opcoes_de_compartilhamento">opções de compartilhamento</string>
    <string name="dados_cadastrais">dados cadastrais</string>
    <string name="marcador">Marcador</string>
    <string name="conexao_social_cadastro">Conecte-se a uma das redes sociais\npara compartilhar suas solicitações</string>
    <string name="pref_shared_session_key">SesssionSocialNetwork</string>
    <string name="deseja_realmente_sair_da_sua_conta">Deseja realmente sair da sua conta?</string>
    <string name="sim">Sim</string>
    <string name="nao">Não</string>
    <string name="todas_as_categorias">Todas as categorias</string>
    <string name="aviso_permissao_login">Você precisa estar logado para acessar esta área.</string>
    <string name="toque_no_ponto_exato_solicitacao">Toque no ponto exato que deseja fazer a solicitação</string>
    <string name="carregando_aguarde">Aguarde, buscando endereço&#8230;</string>
    <string name="ponto_de_referencia">Ponto de referência</string>
    <string name="placeholder_endereco">Ex: Avenida Brasil</string>
    <string name="carregando">Carregando…</string>
    <string name="inicializando">Inicializando…</string>
    <string name="logout_social">Logout de Rede Social</string>
    <string name="logout_social_message">Deseja realmente fazer logout do %s</string>
    <string name="failed_social_auth">Falha na autenticação da rede social</string>
    <string name="selecione_a_categoria_subcategoria">SELECIONE A CATEGORIA E SUBCATEGORIA</string>
    <string name="confidential_disclaimer">As suas informações pessoais serão mantidas em absoluto sigilo e não serão divulgadas.</string>
    <string name="old_password">Senha atual</string>
    <string name="new_password">Nova senha</string>
    <string name="city">Cidade</string>
    <string name="screen_name_select_local">Seleção de Local (Novo Relato)</string>
    <string name="ok">Ok</string>
    <string name="no_location_detected">Localização não encontrada</string>
    <string name="no_connection">Sua conexão com a Internet encontra-se indisponível. Verifique a conexão e tente novamente</string>
    <string name="only_three_photos">É possível adicionar apenas 3 fotos para um relato</string>
    <string name="request_sent">Solicitação enviada</string>
    <string name="dialog_info">Você será avisado quando sua solicitação for atualizada</string>
    <string name="line_separator">\n</string>
    <string name="note_protocol">Anote seu protocolo:</string>
    <string name="solution_due">Prazo de solução:</string>
    <string name="pass_length_message">A senha deve ter pelo menos 6 caracteres!</string>
    <string name="cadastro">Cadastro</string>
    <string name="waiting_message">Por favor, aguarde...</string>
    <string name="login_success">Login realizado com sucesso</string>
    <string name="register_fail">Falha no cadastro</string>
    <string name="review_fields_message">Complete ou corrija os campos indicados</string>
    <string name="sending_request">Enviando solicitação...</string>
    <string name="invalid_address">Endereço inválido</string>
    <string name="invalid_address_inserted">O endereço inserido é inválido</string>
    <string name="no_number">Sem número</string>
    <string name="address_not_found">Endereço não encontrado</string>
    <string name="create_report">Criação de Relato</string>
    <string name="gcm_project">327699244962</string>

    <string-array name="foto_menu">
        <item>Escolher foto do álbum</item>
        <item>Tirar foto</item>
        <item>Cancelar</item>
    </string-array>

    <string-array name="foto_menu_restricted">
        <item>Tirar foto</item>
        <item>Cancelar</item>
    </string-array>
    
    <string-array name="foto_menu_editar">
        <item>Remover foto</item>
        <item>Escolher foto do álbum</item>
        <item>Tirar foto</item>
        <item>Cancelar</item>
    </string-array>
</resources>