<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

  <RelativeLayout
      android:id="@+id/topbar"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_alignParentTop="true"
      android:background="@android:color/white"
      android:paddingBottom="10dp"
      android:paddingLeft="5dp"
      android:paddingRight="5dp"
      android:paddingTop="10dp">

    <br.com.lfdb.zup.widget.CustomFontTextView
        android:id="@+id/addAccount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:text="@string/nova_conta"
        android:textColor="#000"
        android:textSize="@dimen/title_text_size"/>

    <br.com.lfdb.zup.widget.CustomFontTextView
        android:id="@+id/btnCancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_centerVertical="true"
        android:background="@drawable/button_black_bg"
        android:text="@string/cancelar"
        android:textColor="#fff"
        android:textSize="@dimen/topbar_button_font_size"/>

    <TextView
        android:id="@+id/btnCreate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_centerVertical="true"
        android:background="@drawable/button_blue_bg"
        android:text="@string/criar"
        android:textColor="#fff"
        android:textSize="@dimen/topbar_button_font_size"/>
  </RelativeLayout>

  <View
      android:id="@+id/separator1"
      android:layout_width="match_parent"
      android:layout_height="1dp"
      android:layout_below="@id/topbar"
      android:background="#ccc"/>

  <ScrollView
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:layout_below="@id/separator1"
      android:background="#fff">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="vertical"
        android:paddingBottom="15dp">

      <br.com.lfdb.zup.widget.CustomFontEditText
          android:id="@+id/nameField"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_margin="5dp"
          android:layout_marginTop="15dp"
          android:background="@drawable/textbox_bg"
          android:hint="@string/nome_completo"
          android:imeOptions="actionNext"
          android:inputType="textNoSuggestions"
          android:padding="12dp"
          android:textColor="#000"
          android:textSize="@dimen/navigation_text_size"/>

      <br.com.lfdb.zup.widget.CustomFontEditText
          android:id="@+id/emailField"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_margin="5dp"
          android:background="@drawable/textbox_bg"
          android:hint="@string/email"
          android:imeOptions="actionNext"
          android:inputType="textEmailAddress"
          android:padding="12dp"
          android:textColor="#000"
          android:textSize="@dimen/navigation_text_size"/>

      <LinearLayout
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:orientation="horizontal"
          android:weightSum="2">

        <br.com.lfdb.zup.widget.CustomFontEditText
            android:id="@+id/passField"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:background="@drawable/textbox_bg"
            android:hint="@string/senha"
            android:imeOptions="actionNext"
            android:inputType="textPassword"
            android:padding="12dp"
            android:textColor="#000"
            android:textSize="@dimen/navigation_text_size"/>

        <br.com.lfdb.zup.widget.CustomFontEditText
            android:id="@+id/confirmPassField"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:background="@drawable/textbox_bg"
            android:ellipsize="end"
            android:hint="@string/confirme_a_senha"
            android:imeOptions="actionNext"
            android:inputType="textPassword"
            android:padding="12dp"
            android:textColor="#000"
            android:textSize="@dimen/navigation_text_size"/>
      </LinearLayout>

      <LinearLayout
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:orientation="horizontal"
          android:weightSum="2">

        <br.com.lfdb.zup.widget.PhoneEditText
            android:id="@+id/phoneField"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:background="@drawable/textbox_bg"
            android:hint="@string/telefone"
            android:imeOptions="actionNext"
            android:padding="12dp"
            android:textColor="#000"
            android:textSize="@dimen/navigation_text_size"/>

        <br.com.lfdb.zup.widget.CpfEditText
            android:id="@+id/documentField"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:background="@drawable/textbox_bg"
            android:hint="@string/cpf"
            android:imeOptions="actionNext"
            android:padding="12dp"
            android:textColor="#000"
            android:textSize="@dimen/navigation_text_size"/>
      </LinearLayout>

      <br.com.lfdb.zup.widget.CustomFontEditText
          android:id="@+id/addressField"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_margin="5dp"
          android:background="@drawable/textbox_bg"
          android:hint="@string/endereco"
          android:imeOptions="actionNext"
          android:inputType="textNoSuggestions"
          android:padding="12dp"
          android:textColor="#000"
          android:textSize="@dimen/navigation_text_size"/>

      <LinearLayout
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:orientation="horizontal"
          android:weightSum="2">

        <br.com.lfdb.zup.widget.CustomFontEditText
            android:id="@+id/complField"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:background="@drawable/textbox_bg"
            android:hint="@string/complemento"
            android:imeOptions="actionNext"
            android:inputType="textNoSuggestions"
            android:padding="12dp"
            android:textColor="#000"
            android:textSize="@dimen/navigation_text_size"/>

        <br.com.lfdb.zup.widget.CepEditText
            android:id="@+id/cepField"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:background="@drawable/textbox_bg"
            android:hint="@string/cep"
            android:imeOptions="actionNext"
            android:padding="12dp"
            android:textColor="#000"
            android:textSize="@dimen/navigation_text_size"/>
      </LinearLayout>

      <br.com.lfdb.zup.widget.CustomFontEditText
          android:id="@+id/neighborhoodField"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_margin="5dp"
          android:background="@drawable/textbox_bg"
          android:hint="@string/bairro"
          android:imeOptions="actionNext"
          android:inputType="textNoSuggestions"
          android:padding="12dp"
          android:textColor="#000"
          android:textSize="@dimen/navigation_text_size"/>

      <br.com.lfdb.zup.widget.CustomFontEditText
          android:id="@+id/cityField"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_margin="5dp"
          android:background="@drawable/textbox_bg"
          android:hint="@string/city"
          android:imeOptions="actionDone"
          android:inputType="textNoSuggestions"
          android:padding="12dp"
          android:textColor="#000"
          android:textSize="@dimen/navigation_text_size"/>

      <TextView
          android:id="@+id/terms"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_marginTop="15dp"
          android:gravity="left"
          android:padding="10dp"
          android:text="@string/concordo_com_os_termos_de_uso"
          android:textColor="#333"
          android:textSize="@dimen/navigation_text_size"/>
    </LinearLayout>
  </ScrollView>

</RelativeLayout>