<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <RelativeLayout
        android:id="@+id/topbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:background="@android:color/white"
        android:paddingBottom="10dp"
        android:paddingRight="5dp"
        android:paddingTop="10dp" >

        <TextView
            android:id="@+id/compartilhamento"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/compartilhamento"
            android:textColor="#000"
            android:textSize="@dimen/title_text_size" />

        <TextView
            android:id="@+id/botaoVoltar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:background="@drawable/side_button_black_bg"
            android:text="@string/voltar"
            android:textColor="#fff" />
    </RelativeLayout>

    <View
        android:id="@+id/separator1"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@id/topbar"
        android:background="#ccc" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/separator1"
        android:layout_marginTop="35dp"
        android:gravity="center_horizontal"
        android:text="@string/conexao_social_cadastro"
        android:textColor="#000"
        android:textSize="@dimen/navigation_text_size" />

    <LinearLayout
        android:id="@+id/social"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/textView1"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:orientation="horizontal"
        android:padding="15dp" >

        <ImageButton
            android:id="@+id/botao_logar_facebook"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dp"
            android:background="@android:color/transparent"
            android:clickable="true"
            android:contentDescription="@string/facebook"
            android:src="@drawable/btn_logar_facebook" />

        <ImageButton
            android:id="@+id/botao_logar_twitter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dp"
            android:background="@android:color/transparent"
            android:clickable="true"
            android:contentDescription="@string/twitter"
            android:src="@drawable/btn_logar_twitter" />

        <ImageButton
            android:id="@+id/botao_logar_google"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:clickable="true"
            android:contentDescription="@string/google"
            android:src="@drawable/btn_logar_google" />
    </LinearLayout>

    <TextView
        android:id="@+id/linkPular"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/social"
        android:layout_centerHorizontal="true"
        android:clickable="true"
        android:padding="30dp"
        android:text="@string/pular_e_acessar_o_aplicativo"
        android:textColor="@color/text_next_color"
        android:textSize="14sp" />

</RelativeLayout>