<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ddd" >

    <LinearLayout
        android:id="@+id/footer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="#333"
        android:gravity="center_horizontal"
        android:orientation="horizontal"
        android:paddingBottom="10dp"
        android:paddingTop="10dp"
        android:weightSum="4" >

        <TextView
            android:id="@+id/exploreButton"
            style="@style/barButton"
            android:drawableTop="@drawable/tabbar_icon_explore_active"
            android:text="@string/explore"
            android:textColor="#fff"
            android:textSize="@dimen/main_menu_font" />

        <TextView
            android:id="@+id/soliciteButton"
            style="@style/barButton"
            android:drawableTop="@drawable/tabbar_icon_solicite"
            android:text="@string/solicite"
            android:textColor="@color/tabbar_text_color"
            android:textSize="@dimen/main_menu_font" />

        <TextView
            android:id="@+id/minhaContaButton"
            style="@style/barButton"
            android:drawableTop="@drawable/tabbar_icon_conta"
            android:text="@string/minha_conta"
            android:textColor="@color/tabbar_text_color"
            android:textSize="@dimen/main_menu_font" />

        <TextView
            android:id="@+id/estatisticasButton"
            style="@style/barButton"
            android:drawableTop="@drawable/tabbar_icon_estatisticas"
            android:text="@string/estatisticas"
            android:textColor="@color/tabbar_text_color"
            android:textSize="@dimen/main_menu_font" />
    </LinearLayout>

    <FrameLayout
        android:id="@+id/fragments_place"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/footer" />

</RelativeLayout>