<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <LinearLayout
        android:id="@+id/loginBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:baselineAligned="false"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:baselineAligned="false"
            android:orientation="horizontal"
            android:weightSum="2" >

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginRight="5dp"
                android:layout_weight="1"
                android:orientation="vertical" >

                <TextView
                    android:id="@+id/labelPossuiConta"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/possui_conta"
                    android:textColor="#808080" />

                <TextView
                    android:id="@+id/botaoLogin"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/button_blue_bg"
                    android:gravity="center"
                    android:text="@string/login"
                    android:textColor="#fff" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_weight="1"
                android:orientation="vertical" >

                <TextView
                    android:id="@+id/labelNaoPossuiConta"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/nao_possui_conta"
                    android:textColor="#808080" />

                <TextView
                    android:id="@+id/botaoCadastrar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/button_cadastre_bg"
                    android:gravity="center"
                    android:text="@string/cadastre_se"
                    android:textColor="#fff" />
            </LinearLayout>
        </LinearLayout>

        <TextView
            android:id="@+id/linkCancelar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:clickable="true"
            android:padding="30dp"
            android:text="@string/cancelar"
            android:textColor="@color/text_next_color"
            android:textSize="14sp" />
    </LinearLayout>

    <TextView
        android:id="@+id/mensagem"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/loginBox"
        android:layout_alignParentTop="true"
        android:gravity="center"
        android:text="@string/aviso_permissao_login"
        android:padding="25dp"
        android:layout_centerHorizontal="true"
        android:textSize="@dimen/title_text_size" />

</RelativeLayout>