<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:scrollbars="vertical" >

    <RelativeLayout
        android:id="@+id/topbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:paddingBottom="10dp"
        android:paddingRight="5dp"
        android:paddingTop="10dp" >

        <TextView
            android:id="@+id/esqueceuSenha"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/esqueceu_a_senha"
            android:textColor="#000"
            android:textSize="@dimen/title_text_size" />

        <TextView
            android:id="@+id/botaoVoltar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:background="@drawable/side_button_black_bg"
            android:text="@string/voltar"
            android:textColor="#fff" />

        <TextView
            android:id="@+id/botaoEnviar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:background="@drawable/button_blue_bg"
            android:text="@string/enviar"
            android:textColor="#fff" />
    </RelativeLayout>

    <View
        android:id="@+id/separator1"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@id/topbar"
        android:layout_marginBottom="5dp"
        android:background="#ccc" />

    <EditText
        android:id="@+id/campoEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/separator1"
        android:layout_margin="5dp"
        android:background="@drawable/textbox_bg"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:padding="12dp"
        android:textColor="#000"
        android:textSize="@dimen/navigation_text_size" />

</RelativeLayout>