<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#fff">

    <RelativeLayout
        android:id="@+id/topbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:background="@android:color/white"
        android:paddingBottom="10dp"
        android:paddingTop="10dp">

        <TextView
            android:id="@+id/titulo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:textColor="#000"
            android:textSize="@dimen/title_text_size" />

        <TextView
            android:id="@+id/botaoVoltar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:background="@drawable/side_button_black_bg"
            android:clickable="true"
            android:text="@string/voltar"
            android:textColor="#fff" />
    </RelativeLayout>

    <View
        android:id="@+id/separator1"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@id/topbar"
        android:background="#ccc" />

    <LinearLayout
        android:id="@+id/barra_navegacao"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/separator1"
        android:background="#f1f1f1"
        android:orientation="horizontal"
        android:padding="20dp">

        <TextView
            android:visibility="gone"
            android:id="@+id/botaoSolicitacoes"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:clickable="true"
            android:gravity="center"
            android:text="@string/solicitaces_maiusculo"
            android:textColor="@color/text_next_color"
            android:textSize="@dimen/navigation_text_size" />

        <TextView
            android:id="@+id/botaoInformacoes"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="15dp"
            android:layout_weight="1"
            android:clickable="true"
            android:gravity="center"
            android:text="@string/informacoes_maiusculo"
            android:textColor="@color/text_previous_color"
            android:textSize="@dimen/navigation_text_size" />
    </LinearLayout>

    <FrameLayout
        android:id="@+id/fragments_place"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/barra_navegacao" />

</RelativeLayout>